# PnC

./: CMakeLists.txt
Config/A1/: INTERFACE.yaml
PnC/: CMakeLists.txt
PnC/A1PnC/: A1Interface.cpp  A1Interface.hpp  A1StateProvider.cpp  A1StateProvider.hpp  CMakeLists.txt
PnC/A1PnC/CtrlSet/: BalanceCtrl.cpp  BalanceCtrl.hpp  CtrlSet.hpp  JointCtrl.hpp
PnC/A1PnC/TestSet/: MoveTest.cpp  MoveTest.hpp
PnC/LaikagoPnC/: CMakeLists.txt  LaikagoDefinition.hpp  LaikagoInterface.cpp  LaikagoInterface.hpp  LaikagoStateEstimator.cpp  LaikagoStateEstimator.hpp  LaikagoStateProvider.cpp  LaikagoStateProvider.hpp
PnC/LaikagoPnC/TaskSet/: CoMxyzRxRyRzTask.cpp  FootRyRzTask.cpp  FootRzXYZTask.cpp  PointFootTask.cpp  SelectedJointTask.cpp  SelectedJointTask.hpp  TaskSet.hpp
RobotModel/Robot/A1/: a1_sim.urdf
RobotModel/Robot/Draco/: DracoPnC_Dart.urdf
RobotModel/Robot/Laikago/: laikago.urdf
RobotModel/Robot/Laikago/meshes/: calf.stl  hip.stl  thigh.stl  thigh_mirror.stl  trunk.stl
